@@ -1,0 +1,1 @@
+RTEMS_SETTINGS
