@@ -1,0 +1,6 @@
+#
+#  $Id$
+#
+
+This directory contains a Makefile demonstrating how to extract information
+from an installed RTEMS.
